--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filosofía & Manga</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 0; text-align: center; background-color: #f4f4f4; }
-        header { background: #222; color: white; padding: 15px; font-size: 24px; }
+        body { font-family: Arial, sans-serif; margin: 0; padding: 0; text-align: center; background-color: #1e1e2e; color: #ffffff; }
+        header { background: #ff5733; color: white; padding: 20px; font-size: 26px; font-weight: bold; text-transform: uppercase; }
         section { padding: 20px; max-width: 800px; margin: auto; }
-        .container { background: white; padding: 20px; border-radius: 10px; box-shadow: 0px 0px 10px rgba(0,0,0,0.1); margin-bottom: 20px; }
-        .btn { background: #ff5733; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; }
-        footer { background: #222; color: white; padding: 10px; position: relative; bottom: 0; width: 100%; }
+        .container { background: #2a2a40; padding: 20px; border-radius: 10px; box-shadow: 0px 0px 10px rgba(255,255,255,0.2); margin-bottom: 20px; }
+        .btn { background: #ffcc00; color: #1e1e2e; padding: 10px 20px; text-decoration: none; border-radius: 5px; font-weight: bold; }
+        footer { background: #ff5733; color: white; padding: 10px; position: relative; bottom: 0; width: 100%; font-size: 14px; }
         img { max-width: 100%; border-radius: 10px; margin-top: 10px; }
-        .quote-box { font-style: italic; font-size: 18px; padding: 15px; background: #ffeeba; border-radius: 10px; margin: 20px auto; width: 80%; }
+        .quote-box { font-style: italic; font-size: 20px; padding: 15px; background: #44475a; border-radius: 10px; margin: 20px auto; width: 80%; color: #ffcc00; font-weight: bold; }
     </style>
     <script>
         function mostrarCita() {
             const citas = [
                 "\"El dolor es inevitable, el sufrimiento es opcional.\" - Naruto Uzumaki",
                 "\"No importa lo profundo que sea el desespero, si mantienes la calma, la luz brillará de nuevo.\" - Guts (Berserk)",
-                "\"Para conocer a alguien de verdad, mira cómo trata a sus inferiores, no a sus iguales.\" - Sirius Black (Harry Potter, pero aplica aquí)",
+                "\"Para conocer a alguien de verdad, mira cómo trata a sus inferiores, no a sus iguales.\" - Sirius Black",
                 "\"El poder no es voluntad, es el fenómeno de hacer que las cosas sucedan.\" - Madara Uchiha"
             ];
             const citaAleatoria = citas[Math.floor(Math.random() * citas.length)];
@@ -37,14 +37,6 @@
             <h2>Bienvenido a Filosofía & Manga</h2>
             <p>Exploramos el pensamiento crítico a través del anime y la filosofía.</p>
             <a href="#talleres" class="btn">Ver Talleres</a>
-        </div>
-    </section>
-    
-    <section id="sobre-mi">
-        <div class="container">
-            <h2>Sobre Mí</h2>
-            <p>Soy un educador social y docente universitario, apasionado por la filosofía y el manga.</p>
-            <img src="https://source.unsplash.com/600x300/?philosophy,books" alt="Imagen sobre mí">
         </div>
     </section>
     
