--- a/index.html
+++ b/index.html
@@ -38,20 +38,7 @@
             <h2>Bienvenido a Filosofía & Manga</h2>
             <p>Exploramos el pensamiento crítico a través del anime y la filosofía. Conectamos ideas filosóficas con historias icónicas del manga para reflexionar sobre valores universales, dilemas éticos y el significado de la vida.</p>
             <img src="https://source.unsplash.com/800x400/?anime,philosophy" alt="Filosofía y Anime">
-            <a href="#talleres" class="btn">Ver Talleres</a>
-        </div>
-    </section>
-    
-    <section id="contacto">
-        <div class="container">
-            <h2>Contacto</h2>
-            <p>Para más información, contáctanos:</p>
-            <form>
-                <input type="text" placeholder="Nombre" required><br><br>
-                <input type="email" placeholder="Correo" required><br><br>
-                <textarea placeholder="Mensaje" required></textarea><br><br>
-                <button type="submit" class="btn">Enviar</button>
-            </form>
+            <a href="test.html" class="btn">Realizar el Test Filosófico</a>
         </div>
     </section>
     
@@ -65,3 +52,4 @@
     </footer>
 </body>
 </html>
+
